fix header text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -138,9 +138,11 @@ a {
 
 .welcome-header {
 	position: absolute;
-	top: 2rem;
+	top: 0;
 	left: 0;
+	padding-top: 2rem;
 	width: 100%;
+	height: 100%;
 	z-index: -1;
 	padding: 0 2rem;
 }
